--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 *{
     margin:0;
     padding: 0;
+    font-family: sans-serif;
 }
 
 .container{
@@ -8,13 +9,16 @@
     justify-content: center;
     align-items: center;
     flex-flow: wrap;
+    height: 100vh;
+    width: 100vw;
 }
-.title{
+.header{
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: red;
     padding: 50px;
+    font-size: x-large;
 }
 .features{
     display: flex;
@@ -29,6 +33,19 @@
     justify-content: center;
     padding: 40px;
 }
-.name{
-    text-align: left;
+input{
+    outline: none;
+    border-radius: 20px;
+    border: 1px solid red;
+    width: 200px;
+    padding: 10px;
+}
+#run{
+    border-radius: 50%;
+    padding: 10px;
+    border: 1px solid red;
+}
+button:hover{
+    color: whitesmoke;
+    background: red;
 }
